--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/luma?autoReconnect=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+ 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
